applications/software/home1/stalwart/routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp
spec:
  ports:
    - name: smtp
      port: 25
      targetPort: 25
  selector:
    app: stalwart
