applications/software/home1/stalwart/routing/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mail-smtp
spec:
  gatewayClassName: main
  listeners:
  - protocol: TCP
    port: 25
    name: smtp
    allowedRoutes:
      kinds:
      - kind: TCPRoute
