applications/software/home1/stalwart/routing/tcproute-imap.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: imap
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: stalwart-listeners
    sectionName: imap
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: stalwart-primary
      port: 143
      weight: 1
