applications/software/home1/stalwart/routing/tcproute-imaps.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: imaps
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: stalwart-listeners
    sectionName: imaps
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: stalwart-primary
      port: 993
      weight: 1
