applications/software/home1/stalwart/routing/tcproute-smtp.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: smtp
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: stalwart-listeners
    sectionName: smtp
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: smtp
      port: 25
      weight: 1
