applications/software/home1/stalwart/routing/tcproute-smtps.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: smtps
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: stalwart-listeners
    sectionName: smtps
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: stalwart-primary
      port: 465
      weight: 1
