applications/software/home1/stalwart/routing/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: smtp
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: smtp
      sectionName: smtp
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: smtp
          port: 25
          weight: 1
